--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/inventory-service
 spring.datasource.username=root
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
-server.port=8082
+server.port=0
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.application.name=inventory-service
+eureka.instance.instanceId = ${spring.application.name}:${random.value}
