--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -9,3 +9,8 @@ server.port=0
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=inventory-service
 eureka.instance.instanceId = ${spring.application.name}:${random.value}
+
+spring.zipkin.base.url=http://localhost:9411
+management.tracing.sampling.probability=1.0
+
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
