--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -33,3 +33,8 @@ resilience4j.timelimiter.instances.inventory.timeout-duration=3s
 
 resilience4j.retry.instances.inventory.max-attempts=3
 resilience4j.retry.instances.inventory.wait-duration=5s
+
+spring.zipkin.base.url=http://localhost:9411
+management.tracing.sampling.probability=1.0
+
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
