--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=product-service
 server.port=0
 
-spring.zipkin.base.url=http://localhost:9411
+spring.zipkin.base.url=http://localhost:9411/
 management.tracing.sampling.probability=1.0
 
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
